Fix vertical align button in alert

--- a/web/css/shop-homepage.css
+++ b/web/css/shop-homepage.css
@@ -134,6 +134,11 @@ footer {
     padding-left: 0;
 }
 
+/** Vertical align button in alert **/
+.alert-align {
+    line-height: 35px;
+}
+
 @media (max-width: 768px) {
     /** MAIN LINK **/
     .navigation > ul {
